--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     </main>
     
     <footer class="text-center mt-12 pt-6 border-t border-gray-300">
-        <p class="text-sm text-gray-500"> tác giả : Nguyễn Gia Phú </p>
+        <p class="text-sm text-gray-500"> Dev by  : Nguyễn Gia Phú </p>
     </footer> 
 
 </body>
+
 </html>
