--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
     
     <footer class="text-center mt-12 pt-6 border-t border-gray-300">
         <p class="text-sm text-gray-500"> Dev & Designer by  : Nguyễn Gia Phú </p>
-        <p class="text-sm text-gray-500"> A1 - K50  </p>
+    </footer> 
+    </main>
+    
+    <footer class="text-center mt-12 pt-6 border-t border-gray-300">
+        <p class="text-sm text-gray-500"> A1 - K50 </p>
     </footer> 
 
 </body>
 
 </html>
+
 
