--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                 <h2 class="text-2xl font-bold text-gray-800 mb-2">Giao Thoa Sóng Ánh Sáng</h2>
                 <p class="text-gray-500">Mô phỏng thí nghiệm khe Young với ánh sáng đơn sắc, hai màu và ánh sáng trắng.</p>
             </a>
+            <a href="đo tần số sóng âm.html" class="card block p-6 bg-white rounded-xl shadow-lg border border-gray-200 hover:border-blue-500">
+                <div class="text-3xl mb-3">🔊</div>
+                <h2 class="text-2xl font-bold text-gray-800 mb-2">Đo Tần Số Sóng Âm (Máy Hiện Sóng)</h2>
+                <p class="text-gray-500">Thực hành đo tần số và chu kỳ sóng âm bằng mô phỏng máy hiện sóng.</p>
+            </a>
             
         </div>
     </main>
@@ -82,5 +87,6 @@
 </body>
 
 </html>
+
 
 
