--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 <h2 class="text-2xl font-bold text-gray-800 mb-2">Đo Tần Số Sóng Âm (Máy Hiện Sóng)</h2>
                 <p class="text-gray-500">Thực hành đo tần số và chu kỳ sóng âm bằng mô phỏng máy hiện sóng.</p>
             </a>
+            <a href="Mô Phỏng Sóng Dừng (Hai Đầu Cố Định).html" class="card block p-6 bg-white rounded-xl shadow-lg border border-gray-200 hover:border-blue-500">
+                <div class="text-3xl mb-3">🎻</div>
+                <h2 class="text-2xl font-bold text-gray-800 mb-2">Mô Phỏng Sóng Dừng (Hai Đầu Cố Định)</h2>
+                <p class="text-gray-500">Quan sát các chế độ sóng dừng khác nhau trên một sợi dây đàn hồi.</p>
+            </a>
             
         </div>
     </main>
@@ -87,6 +92,7 @@
 </body>
 
 </html>
+
 
 
 
