--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                 <h2 class="text-2xl font-bold text-gray-800 mb-2">Mô Phỏng Sóng Dừng (Hai Đầu Cố Định)</h2>
                 <p class="text-gray-500">Quan sát các chế độ sóng dừng khác nhau trên một sợi dây đàn hồi.</p>
             </a>
+            <a href="Mô Phỏng Sóng Dừng (q đầu cố định-1 đầu tự do).html" class="card block p-6 bg-white rounded-xl shadow-lg border border-gray-200 hover:border-blue-500">
+                <div class="text-3xl mb-3">🔗</div>
+                <h2 class="text-2xl font-bold text-gray-800 mb-2">Mô Phỏng Sóng Dừng (1 Đầu Cố Định - 1 Đầu Tự Do)</h2>
+                <p class="text-gray-500">Quan sát sự hình thành sóng dừng trên sợi dây với hai điều kiện biên khác nhau.</p>
+            </a>            
             
         </div>
     </main>
@@ -92,6 +97,7 @@
 </body>
 
 </html>
+
 
 
 
