--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -56,7 +57,7 @@
         <!-- Logo -->
         <div class="h-[70px] flex items-center px-8 bg-[#1a1a27]">
             <h1 class="text-white font-bold text-xl tracking-wider flex items-center gap-2">
-                <span class="text-metronic-primary text-2xl">⚛️</span> VẬT LÝ
+                <span class="text-metronic-primary text-2xl">⚛️</span> VẬT LÝ K50
             </h1>
         </div>
 
@@ -69,6 +70,25 @@
                 <span class="font-medium">Tổng Quan</span>
             </a>
 
+            <div class="px-5 mt-6 mb-2 text-xs font-semibold text-metronic-muted uppercase tracking-wider">Custom</div>
+            
+            <a href="#" class="sidebar-item flex items-center px-6 py-3 text-metronic-muted transition-colors cursor-pointer mb-1">
+                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.384-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z"></path></svg>
+                <span class="font-medium">Thí Nghiệm</span>
+            </a>
+            
+            <a href="#" class="sidebar-item flex items-center px-6 py-3 text-metronic-muted transition-colors cursor-pointer mb-1">
+                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+                <span class="font-medium">Thống Kê</span>
+            </a>
+
+            <div class="px-5 mt-6 mb-2 text-xs font-semibold text-metronic-muted uppercase tracking-wider">Layout</div>
+            <a href="#" class="sidebar-item flex items-center px-6 py-3 text-metronic-muted transition-colors cursor-pointer mb-1">
+                <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                <span class="font-medium">Cài Đặt</span>
+            </a>
+        </nav>
+    </aside>
 
     <!-- MAIN CONTENT -->
     <main class="flex-1 flex flex-col overflow-hidden">
@@ -274,7 +294,7 @@
             <!-- Footer -->
             <footer class="mt-auto py-6 border-t border-gray-200 flex flex-col md:flex-row items-center justify-between text-sm text-metronic-muted">
                 <div class="order-2 md:order-1 mt-2 md:mt-0">
-                    <span class="font-medium text-metronic-dark">2025 ©</span> Metronic Physics Theme
+                    <span class="font-medium text-metronic-dark">2024 ©</span> Metronic Physics Theme
                 </div>
                 <div class="order-1 md:order-2 flex gap-4">
                     <span>Dev & Designer: <span class="text-metronic-dark font-medium">Nguyễn Gia Phú</span></span>
@@ -286,4 +306,3 @@
     </main>
 </body>
 </html>
-
