--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -57,7 +56,7 @@
         <!-- Logo -->
         <div class="h-[70px] flex items-center px-8 bg-[#1a1a27]">
             <h1 class="text-white font-bold text-xl tracking-wider flex items-center gap-2">
-                <span class="text-metronic-primary text-2xl">⚛️</span> VẬT LÝ K50
+                <span class="text-metronic-primary text-2xl">⚛️</span> VẬT LÝ
             </h1>
         </div>
 
@@ -294,7 +293,7 @@
             <!-- Footer -->
             <footer class="mt-auto py-6 border-t border-gray-200 flex flex-col md:flex-row items-center justify-between text-sm text-metronic-muted">
                 <div class="order-2 md:order-1 mt-2 md:mt-0">
-                    <span class="font-medium text-metronic-dark">2024 ©</span> Metronic Physics Theme
+                    <span class="font-medium text-metronic-dark">2025 ©</span> Metronic Physics Theme
                 </div>
                 <div class="order-1 md:order-2 flex gap-4">
                     <span>Dev & Designer: <span class="text-metronic-dark font-medium">Nguyễn Gia Phú</span></span>
